@@ -27,21 +27,24 @@
  */
 package org.hisp.dhis.query;
 
-import static java.util.Collections.singletonList;
+import static org.hisp.dhis.query.Filters.eq;
+import static org.hisp.dhis.query.Filters.ilike;
+import static org.hisp.dhis.query.Filters.in;
 
-import com.google.common.collect.Lists;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import lombok.AllArgsConstructor;
-import org.hisp.dhis.common.BaseIdentifiableObject;
 import org.hisp.dhis.common.IdentifiableObject;
 import org.hisp.dhis.common.PagerUtils;
-import org.hisp.dhis.hibernate.HibernateProxyUtils;
+import org.hisp.dhis.query.operators.MatchMode;
+import org.hisp.dhis.query.operators.Operator;
 import org.hisp.dhis.schema.Property;
 import org.hisp.dhis.schema.Schema;
 import org.hisp.dhis.schema.SchemaService;
+import org.hisp.dhis.security.acl.Access;
 import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.system.util.ReflectionUtils;
 import org.hisp.dhis.user.CurrentUserUtil;
@@ -52,13 +55,13 @@ import org.springframework.stereotype.Component;
  */
 @Component("org.hisp.dhis.query.InMemoryQueryEngine")
 @AllArgsConstructor
-public class InMemoryQueryEngine<T extends IdentifiableObject> implements QueryEngine<T> {
-  private final SchemaService schemaService;
+public class InMemoryQueryEngine implements QueryEngine {
 
+  private final SchemaService schemaService;
   private final AclService aclService;
 
   @Override
-  public List<T> query(Query query) {
+  public <T extends IdentifiableObject> List<T> query(Query<T> query) {
     validateQuery(query);
     List<T> list = runQuery(query);
     list = runSorter(query, list);
@@ -69,20 +72,19 @@ public class InMemoryQueryEngine<T extends IdentifiableObject> implements QueryE
   }
 
   @Override
-  public long count(Query query) {
+  public <T extends IdentifiableObject> long count(Query<T> query) {
     validateQuery(query);
     List<T> list = runQuery(query);
-
     return list.size();
   }
 
-  private void validateQuery(Query query) {
+  private void validateQuery(Query<?> query) {
     if (query.getCurrentUserDetails() == null) {
       query.setCurrentUserDetails(CurrentUserUtil.getCurrentUserDetails());
     }
 
-    if (query.getSchema() == null) {
-      throw new QueryException("Invalid Query object, does not contain Schema");
+    if (query.getObjectType() == null) {
+      throw new QueryException("Invalid Query object, does not contain an object type");
     }
 
     if (query.getObjects() == null) {
@@ -90,15 +92,12 @@ public class InMemoryQueryEngine<T extends IdentifiableObject> implements QueryE
     }
   }
 
-  @SuppressWarnings("unchecked")
-  private List<T> runQuery(Query query) {
-    return query.getObjects().stream()
-        .filter(object -> test(query, (T) object))
-        .map(object -> (T) object)
-        .collect(Collectors.toList());
+  private <T extends IdentifiableObject> List<T> runQuery(Query<T> query) {
+    List<Matcher> matchers = query.getFilters().stream().map(f -> matcherOf(query, f)).toList();
+    return query.getObjects().stream().filter(object -> matches(query, object, matchers)).toList();
   }
 
-  private List<T> runSorter(Query query, List<T> objects) {
+  private <T extends IdentifiableObject> List<T> runSorter(Query<T> query, List<T> objects) {
     List<T> sorted = new ArrayList<>(objects);
 
     sorted.sort(
@@ -114,160 +113,127 @@ public class InMemoryQueryEngine<T extends IdentifiableObject> implements QueryE
     return sorted;
   }
 
-  private boolean test(Query query, T object) {
-    List<Boolean> testResults = new ArrayList<>();
-
-    for (Criterion criterion : query.getCriterions()) {
-      boolean testResult = false;
-
-      // normal Restriction, just assume Conjunction
-      if (criterion instanceof Restriction) {
-        Restriction restriction = (Restriction) criterion;
-        testResult = testAnd(query, object, singletonList(restriction));
-      } else if (criterion instanceof Conjunction) {
-        Conjunction conjunction = (Conjunction) criterion;
-        testResult = testAnd(query, object, conjunction.getCriterions());
-      } else if (criterion instanceof Disjunction) {
-        Disjunction disjunction = (Disjunction) criterion;
-        testResult = testOr(query, object, disjunction.getCriterions());
-      }
-
-      testResults.add(testResult);
-    }
-
+  private <T extends IdentifiableObject> boolean matches(
+      Query<T> query, T object, List<Matcher> matchers) {
     if (query.getRootJunctionType() == Junction.Type.OR) {
-      return testResults.contains(Boolean.TRUE);
+      // OR
+      for (Matcher matcher : matchers) if (matches(query, object, matcher)) return true;
+      return false;
     }
-
-    return !testResults.contains(Boolean.FALSE);
-  }
-
-  private boolean testAnd(Query query, T object, List<? extends Criterion> criterions) {
-    for (Criterion criterion : criterions) {
-      if (criterion instanceof Restriction) {
-        Restriction restriction = (Restriction) criterion;
-        Object value = getValue(query, object, restriction);
-
-        if (!(value instanceof Collection)) {
-          if (!restriction.getOperator().test(value)) {
-            return false;
-          }
-        } else {
-          Collection<?> collection = (Collection<?>) value;
-
-          for (Object item : collection) {
-            if (restriction.getOperator().test(item)) {
-              return true;
-            }
-          }
-
-          return false;
-        }
-      }
-    }
-
+    // AND
+    for (Matcher matcher : matchers) if (!matches(query, object, matcher)) return false;
     return true;
   }
 
-  private boolean testOr(Query query, T object, List<? extends Criterion> criterions) {
-    for (Criterion criterion : criterions) {
-      if (criterion instanceof Restriction) {
-        Restriction restriction = (Restriction) criterion;
-        Object value = getValue(query, object, restriction);
+  /**
+   * The main purpose of matchers is to "cache" the knowledge of how to extract a value for a filter
+   * test from an object of the listed object type.
+   *
+   * @param filter the filter that is applied
+   * @param match a function to test if an object matches the filter
+   */
+  private record Matcher(Filter filter, Predicate<Object> match) {}
 
-        if (!(value instanceof Collection)) {
-          if (restriction.getOperator().test(value)) {
-            return true;
-          }
-        } else {
-          Collection<?> collection = (Collection<?>) value;
-
-          for (Object item : collection) {
-            if (restriction.getOperator().test(item)) {
-              return true;
-            }
-          }
-        }
-      }
+  private <T extends IdentifiableObject> boolean matches(
+      Query<T> query, T object, Matcher matcher) {
+    Filter filter = matcher.filter;
+    if (filter.isVirtual()) {
+      if (filter.isMentions()) return matchesMentions(query, object, matcher);
+      if (filter.isIdentifiable()) return matchesIdentifiable(query, object, matcher);
+      if (filter.isQuery()) return matchesQuery(query, object, matcher);
+      throw new UnsupportedOperationException("Special filter is not implemented yet :/ " + filter);
     }
-
-    return false;
+    return matcher.match.test(object);
   }
 
-  @SuppressWarnings("unchecked")
-  private Object getValue(Query query, Object object, Restriction filter) {
-    String path = filter.getPath();
+  private <T extends IdentifiableObject> boolean matchesMentions(
+      Query<T> query, T object, Matcher matcher) {
+    Operator<?> op = matcher.filter.getOperator();
+    return matches(query, object, matcherOf(query, in("mentions.username", op.getArgs())))
+        || matches(query, object, matcherOf(query, in("comments.mentions.username", op.getArgs())));
+  }
+
+  private <T extends IdentifiableObject> boolean matchesIdentifiable(
+      Query<T> query, T object, Matcher matcher) {
+    Operator<?> op = matcher.filter.getOperator();
+    return matches(query, object, matcherOf(query, new Filter("id", op)))
+        || matches(query, object, matcherOf(query, new Filter("code", op)))
+        || matches(query, object, matcherOf(query, new Filter("name", op)))
+        || query.isShortNamePersisted()
+            && matches(query, object, matcherOf(query, new Filter("shortName", op)));
+  }
+
+  private <T extends IdentifiableObject> boolean matchesQuery(
+      Query<T> query, T object, Matcher matcher) {
+    String value = (String) matcher.filter.getOperator().getArgs().get(0);
+    return matches(query, object, matcherOf(query, eq("id", value)))
+        || matches(query, object, matcherOf(query, eq("code", value)))
+        || matches(query, object, matcherOf(query, ilike("name", value, MatchMode.ANYWHERE)));
+  }
+
+  private Matcher matcherOf(Query<?> query, Filter filter) {
+    return new Matcher(filter, filterMatch(query, filter));
+  }
+
+  private Predicate<Object> filterMatch(Query<?> q, Filter f) {
+    if (f.isAttribute()) return filterMatchAttribute(f);
+
+    String path = f.getPath();
+    Schema schema = schemaService.getDynamicSchema(q.getObjectType());
+
+    // flat path
+    if (!path.contains(".")) return filterMatch(schema.getProperty(path), f);
+
+    // nested path
     String[] paths = path.split("\\.");
-    Schema currentSchema = query.getSchema();
-
-    if (path.contains("access") && query.getSchema().isIdentifiableObject()) {
-      ((BaseIdentifiableObject) object)
-          .setAccess(aclService.getAccess((T) object, query.getCurrentUserDetails()));
-    }
-
+    Property[] properties = new Property[paths.length];
     for (int i = 0; i < paths.length; i++) {
-      Property property = currentSchema.getProperty(paths[i]);
-
-      if (property == null) {
-        if (i == paths.length - 1 && filter.isAttribute()) {
-          return ((BaseIdentifiableObject) object).getAttributeValues().get(paths[i]);
-        }
-        throw new QueryException("No property found for path " + path);
-      }
-
-      if (property.isCollection()) {
-        currentSchema = schemaService.getDynamicSchema(property.getItemKlass());
-      } else {
-        currentSchema = schemaService.getDynamicSchema(property.getKlass());
-      }
-
-      object = collect(object, property);
-
-      if (path.contains("access") && property.isIdentifiableObject()) {
-        if (property.isCollection()) {
-          for (Object item : ((Collection<?>) object)) {
-            ((BaseIdentifiableObject) item)
-                .setAccess(aclService.getAccess((T) item, query.getCurrentUserDetails()));
-          }
-        } else {
-          ((BaseIdentifiableObject) object)
-              .setAccess(aclService.getAccess((T) object, query.getCurrentUserDetails()));
-        }
-      }
-
-      if (i == (paths.length - 1)) {
-        if (property.isCollection()) {
-          return Lists.newArrayList(object);
-        }
-
-        return object;
-      }
+      Property p = schema.getProperty(paths[i]);
+      if (p == null) throw new QueryException("No property found for path " + path);
+      properties[i] = p;
+      schema =
+          p.isCollection()
+              ? schemaService.getDynamicSchema(p.getItemKlass())
+              : schemaService.getDynamicSchema(p.getKlass());
     }
-
-    throw new QueryException("No values found for path " + path);
+    Predicate<Object> res = filterMatch(properties[properties.length - 1], f);
+    for (int i = properties.length - 2; i >= 0; i--) {
+      Property p = properties[i];
+      res = filterMatch(p, res);
+      if (p.getKlass() == Access.class)
+        res =
+            filterMatchWithAccess(obj -> aclService.getAccess(obj, q.getCurrentUserDetails()), res);
+    }
+    return res;
   }
 
-  @SuppressWarnings({"rawtypes"})
-  private Object collect(Object object, Property property) {
-    object = HibernateProxyUtils.unproxy(object);
+  private Predicate<Object> filterMatchAttribute(Filter f) {
+    return obj ->
+        obj instanceof IdentifiableObject io
+            && f.getOperator().test(io.getAttributeValues().get(f.getPath()));
+  }
 
-    if (object instanceof Collection) {
-      Collection<?> collection = (Collection<?>) object;
-      List<Object> items = new ArrayList<>();
+  private Predicate<Object> filterMatch(Property p, Filter f) {
+    Operator<?> op = f.getOperator();
+    return obj -> op.test(ReflectionUtils.invokeMethod(obj, p.getGetterMethod()));
+  }
 
-      for (Object item : collection) {
-        Object collect = collect(item, property);
+  private Predicate<Object> filterMatch(Property p, Predicate<Object> tail) {
+    return obj -> {
+      Object value = ReflectionUtils.invokeMethod(obj, p.getGetterMethod());
+      return p.isCollection() && value instanceof Collection<?> c
+          ? c.stream().anyMatch(tail)
+          : tail.test(value);
+    };
+  }
 
-        if (collect instanceof Collection) {
-          items.addAll(((Collection) collect));
-        } else {
-          items.add(collect);
-        }
+  private Predicate<Object> filterMatchWithAccess(
+      Function<IdentifiableObject, Access> getAccess, Predicate<Object> tail) {
+    return obj -> {
+      if (obj instanceof IdentifiableObject io) {
+        io.setAccess(getAccess.apply(io));
       }
-
-      return items;
-    }
-
-    return ReflectionUtils.invokeMethod(object, property.getGetterMethod());
+      return tail.test(obj);
+    };
   }
 }
